examples/test/testpolicy16795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16795
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key12: value4
      key36: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value38
      podSelector:
        matchLabels:
          key3: value19
          key16: value16
